# Anime1LocalServer

./: .gitignore  README.md  build.py  main.py  pyproject.toml  requirements.txt  requirements_tray.txt  run.ps1  run.sh  tray.py
.github/workflows/: python_package.yml
